simp_trace now qualified in Isabelle/ML. Rare INCOMPATIBILITY.

* Operations mk_rrules, eq_rrule, cert_simproc, transform_simproc,
trim_context_simproc, mk_solver, empty_ss, merge_ss, empty_simpset,
clear_simpset, simpset_map, map_theory_simpset, fold_rule, fold_goals_tac,
norm_hhf, norm_hhf_protect from structure "Simplifier" are now qualified.
Minor INCOMPATIBILITY.

* Datatype proc_kind from structure "Simplifier" is now qualified. Rare
INCOMPATIBILITY.

* Discontinued alias "Raw_Simplifier.rewrite"; use "Simplifier.rewrite_wrt"
instead. Rare INCOMPATIBILITY.

* Discontinued infixes "addsimprocs" and "delsimprocs"; use explicit
"Simplifier.add_proc" and "Simplifier.del_proc" instead. Minor INCOMPATIBILITY.

* Discontinued infix "delsimps"; use explicit "Simplifier.del_simps" instead.
Minor INCOMPATIBILITY.


*** Isabelle/jEdit Prover IDE ***

* The menu bar of jEdit has been adapted to the requirements of
Isabelle/jEdit, with special focus on accessibility: menus need to be
clearly structured and provide reasonable access paths, usually with
shortcuts. The following menus and items are particularly notable:

  - Utilities / Plugin Manager: moved here from Plugins menu
  - Utilities / Macros: moved here from main menu bar
  - Plugins: only lists submenus from plugins
  - Isabelle: moved here from Plugins / Isabelle
  - Options: new menu with Buffer, Global, Plugin, Isabelle Options.
  - Help: new item for Isabelle Documentation.

* The menu action "Edit / Complete word" now refers to
"isabelle.complete-words" instead of "complete-word" from classic jEdit.
Minor INCOMPATIBILITY.

* Support for additional look-and-feels: "FlatLaf IntelliJ" and "FlatLaf
Darcula".

* The FlatLaf look-and-feel has been patched slightly, to recover the
regular Java/Swing behavior of the F10 key on all platforms, notably
Windows. F10 should focus the menu bar and open the first menu, which
can be reversed via the ESCAPE. Consequently, the NVDA Screen Reader