@@ -79,7 +79,7 @@ fun set_mksimps mk = set_mksimps_context (fn thm => fn ctxt => (mk ctxt thm, ctx
 
 (* attributes *)
 
-fun attrib f = Thm.declaration_attribute (map_ss o f);
+fun attrib f = Thm.declaration_attribute (map_simpset o f);
 
 val simp_add = attrib add_simp;
 val simp_del = attrib del_simp;
@@ -149,7 +149,7 @@ fun define_simproc {passive, name, kind, lhss, proc, identifier} lthy =
         in
           context
           |> Simprocs.map (#2 o Name_Space.define context true (name', simproc'))
-          |> not passive ? map_ss (add_proc simproc')
+          |> not passive ? map_simpset (add_proc simproc')
         end)
     |> pair simproc0
   end;
@@ -402,7 +402,7 @@ val add_del =
   (Args.del -- Args.colon >> K del_proc ||
     Scan.option (Args.add -- Args.colon) >> K add_proc)
   >> (fn f => fn simproc => Morphism.entity (fn phi => Thm.declaration_attribute
-      (K (map_ss (f (transform_simproc phi simproc))))));
+      (K (map_simpset (f (transform_simproc phi simproc))))));
 
 in
 
@@ -514,7 +514,7 @@ val safe_solver = mk_solver "Pure safe" safe_solver_tac;
 
 val _ =
   Theory.setup
-    (method_setup [] #> Context.theory_map (map_ss (
+    (method_setup [] #> Context.theory_map (map_simpset (
       empty_simpset
       #> set_safe_solver safe_solver
       #> set_unsafe_solver unsafe_solver
